Fix spacing in css file

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ body {
 img {
   display: block;
   width: 5rem;
+  margin: 1.5rem;
 }
 
 li {
@@ -42,6 +43,7 @@ a {
   background-color: #444;
   color: #fff;
   padding: .5rem;
+  width: 7rem;
 }
 
 ul {
@@ -58,7 +60,13 @@ h2 {
 }
 
 hgroup {
+  display: block;
+  align-items: center;
   width: 16rem;
+}
+
+h3, h4 {
+  margin: 0;
 }
 
 p {
